--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -3,41 +3,41 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Construction HTML-5 Template</title>
+    <title>{{title}}</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="site.webmanifest" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/favicon.ico"
+      href="/assets/img/favicon.ico"
     />
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="assets/css/slicknav.css" />
-    <link rel="stylesheet" href="assets/css/animate.min.css" />
-    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
-    <link rel="stylesheet" href="assets/css/fontawesome-all.min.css" />
-    <link rel="stylesheet" href="assets/css/themify-icons.css" />
-    <link rel="stylesheet" href="assets/css/slick.css" />
-    <link rel="stylesheet" href="assets/css/nice-select.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="/assets/css/slicknav.css" />
+    <link rel="stylesheet" href="/assets/css/animate.min.css" />
+    <link rel="stylesheet" href="/assets/css/magnific-popup.css" />
+    <link rel="stylesheet" href="/assets/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/assets/css/themify-icons.css" />
+    <link rel="stylesheet" href="/assets/css/slick.css" />
+    <link rel="stylesheet" href="/assets/css/nice-select.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
 
   <body>
     <!-- Preloader Start -->
-    <div id="preloader-active">
+    <!-- <div id="preloader-active">
       <div class="preloader d-flex align-items-center justify-content-center">
         <div class="preloader-inner position-relative">
           <div class="preloader-circle"></div>
           <div class="preloader-img pere-text">
-            <img src="assets/img/logo/loder-logo.png" alt="" />
+            <img src="/assets/img/logo/loder-logo.png" alt="" />
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Preloader Start -->
     <header>
       <!-- Header Start -->
@@ -51,9 +51,11 @@
                 >
                   <div class="header-info-left">
                     <ul>
-                      <li>+(91) 522-2636842</li>
+                      <li><a href="tel:+12535652365">+(91) 522-2636842</a></li>
                       <li>
-                        <a href="mailto:saleslkw@premierispat.com"
+                        <a
+                          href="mailto:saleslkw@premierispat.com"
+                          target="_blank"
                           >saleslkw@premierispat.com</a
                         >
                       </li>
@@ -63,16 +65,16 @@
                   <div class="header-info-right">
                     <ul class="header-social">
                       <li>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-whatsapp"></i></a>
                       </li>
                       <li>
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
                       </li>
                     </ul>
                   </div>
@@ -87,12 +89,12 @@
                 <div class="col-xl-2 col-lg-2 col-md-1">
                   <div class="logo">
                     <!-- logo-1 -->
-                    <a href="index.html" class="big-logo">
-                      <img src="assets/img/logo/PREMIER.png" alt="" />
+                    <a href="/" class="big-logo">
+                      <img src="/assets/img/logo/PREMIER.png" alt="" />
                     </a>
                     <!-- logo-2 -->
-                    <a href="index.html" class="small-logo">
-                      <img src="assets/img/logo/loder-logo.png" alt="" />
+                    <a href="/" class="small-logo">
+                      <img src="/assets/img/logo/loder-logo.png" alt="" />
                     </a>
                   </div>
                 </div>
@@ -101,10 +103,10 @@
                   <div class="main-menu d-none d-lg-block text-center">
                     <nav>
                       <ul id="navigation" class="justify-content-center">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="project.html">Projects</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/project/">Projects</a></li>
+                        <li><a href="/service/">Services</a></li>
+                        <li><a href="/contact/">Contact</a></li>
                       </ul>
                     </nav>
                   </div>
@@ -125,7 +127,7 @@
       </div>
       <!-- Header End -->
     </header>
-   
+    <main>{{content }}</main>
     <footer>
       <!-- Footer Start-->
       <div class="footer-main">
@@ -136,8 +138,8 @@
                 <div class="single-footer-caption mb-30">
                   <!-- logo -->
                   <div class="footer-logo">
-                    <a href="index.html"
-                      ><img src="assets/img/logo/PREMIER.png" alt=""
+                    <a href="/"
+                      ><img src="/assets/img/logo/PREMIER.png" alt=""
                     /></a>
                   </div>
                   <div class="footer-tittle">
@@ -154,10 +156,10 @@
                   <div class="footer-tittle">
                     <h4>Quick Links</h4>
                     <ul>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Services</a></li>
-                      <li><a href="#">Projects</a></li>
-                      <li><a href="#">Contact Us</a></li>
+                      <li><a href="/">About</a></li>
+                      <li><a href="/service/">Services</a></li>
+                      <li><a href="/project/">Projects</a></li>
+                      <li><a href="/contact/">Contact Us</a></li>
                     </ul>
                   </div>
                 </div>
@@ -170,50 +172,15 @@
                       <p class="info1">Address here</p>
                     </div>
                     <ul>
-                      <li><a href="#">Phone: +95 (0) 123 456 789</a></li>
-                      <li><a href="#">Cell: +95 (0) 123 456 789</a></li>
+                      <li>
+                        <a href="tel:+12535652365"
+                          >Phone: +95 (0) 123 456 789</a
+                        >
+                      </li>
+                      <li>
+                        <a href="tel:+12535652365">Cell: +95 (0) 123 456 789</a>
+                      </li>
                     </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-8">
-                <div class="single-footer-caption mb-50">
-                  <!-- Form -->
-                  <div class="footer-form">
-                    <div id="mc_embed_signup">
-                      <form
-                        target="_blank"
-                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                        method="get"
-                        class="subscribe_form relative mail_part"
-                        novalidate="true"
-                      >
-                        <input
-                          type="email"
-                          name="EMAIL"
-                          id="newsletter-form-email"
-                          placeholder=" Email Address "
-                          class="placeholder hide-on-focus"
-                          onfocus="this.placeholder = ''"
-                          onblur="this.placeholder = ' Email Address '"
-                        />
-                        <div class="form-icon">
-                          <button
-                            type="submit"
-                            name="submit"
-                            id="newsletter-submit"
-                            class="email_icon newsletter-submit button-contactForm"
-                          >
-                            SIGN UP
-                          </button>
-                        </div>
-                        <div class="mt-10 info"></div>
-                      </form>
-                    </div>
-                  </div>
-                  <!-- Map -->
-                  <div class="map-footer">
-                    <img src="assets/img/gallery/map-footer.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -228,8 +195,13 @@
                     <script>
                       document.write(new Date().getFullYear());
                     </script>
-                    All rights reserved | This template is made with
-                    <i class="fa fa-heart" aria-hidden="true"></i> by
+                    All rights reserved | Developed by
+                    <a
+                      href="https://display-promotion.vercel.app"
+                      target="_blank"
+                      >Display Promotion</a
+                    >
+                    with
                     <a href="https://colorlib.com" target="_blank">Colorlib</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   </p>
