--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2253,7 +2253,7 @@ hr {
   font-size: 140px;
   font-weight: 800;
   text-transform: uppercase;
-  -webkit-text-stroke: 1px #f6f7f8;
+  -webkit-text-stroke: 1px #ff5e1365;
   -webkit-text-fill-color: transparent;
   margin: 0;
   line-height: 1;
@@ -2739,11 +2739,11 @@ hr {
 }
 
 .header-area .header-top .header-info-right .header-social a i {
-  -webkit-transition: all .4s ease-out 0s;
-  -moz-transition: all .4s ease-out 0s;
-  -ms-transition: all .4s ease-out 0s;
-  -o-transition: all .4s ease-out 0s;
-  transition: all .4s ease-out 0s;
+  -webkit-transition: all .8s ease-out 0s;
+  -moz-transition: all .8s ease-out 0s;
+  -ms-transition: all .8s ease-out 0s;
+  -o-transition: all .8s ease-out 0s;
+  transition: all .8s ease-out 0s;
   transform: rotateY(0deg);
   -webkit-transform: rotateY(0deg);
   -moz-transform: rotateY(0deg);
@@ -2752,11 +2752,11 @@ hr {
 }
 
 .header-area .header-top .header-info-right .header-social a:hover i {
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg)
+  transform: rotateY(360deg);
+  -webkit-transform: rotateY(360deg);
+  -moz-transform: rotateY(360deg);
+  -ms-transform: rotateY(360deg);
+  -o-transform: rotateY(360deg)
 }
 
 .header-sticky.sticky-bar.sticky {
