--- a/src/index.njk
+++ b/src/index.njk
@@ -150,13 +150,12 @@ title: VMG PREMIER Builds
         <div
             class="left-content">
             <!-- section tittle -->
-            <div class="section-tittle section-tittle2 mb-55 pt-40">
+            <div class="section-tittle section-tittle2 mb-55 ">
                 <div class="front-text">
                     <p class="">
                         <span>Vision</span>
                         & Mission</p>
                 </div>
-                <span class="back-text">Vision</span>
             </div>
             <div class="support-caption">
                 <p class="pera-top">
