--- a/src/project.njk
+++ b/src/project.njk
@@ -42,7 +42,7 @@ title: VMG Projects
                         <div class="front-text">
                             <h2 class="">Our Projects</h2>
                         </div>
-                        <span class="back-text">Gellary</span>
+                        <span class="back-text">Gallery</span>
                     </div>
                 </div>
                 <div class="col-lg-6">
