--- a/src/service.njk
+++ b/src/service.njk
@@ -53,9 +53,9 @@ title: VMG Projects
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/design_and_engineering.html">Designing &amp; Engineering</a>
+                            <a href="/services/design_and_engineering.html">Designing &amp; Engineering</a>
                         </h4>
-                        <a href="./services/design_and_engineering.html" class="more-btn">Read More
+                        <a href="/services/design_and_engineering.html" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -71,9 +71,9 @@ title: VMG Projects
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/manufacturing.html">Manufacturing</a>
+                            <a href="/services/manufacturing.html">Manufacturing</a>
                         </h4>
-                        <a href="./services/manufacturing.html" class="more-btn">Read More
+                        <a href="/services/manufacturing.html" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -89,9 +89,9 @@ title: VMG Projects
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/logistic.html">Logistic</a>
+                            <a href="/services/logistic.html">Logistic</a>
                         </h4>
-                        <a href="./services/logistic.html" class="more-btn">Read More
+                        <a href="/services/logistic.html" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -107,9 +107,9 @@ title: VMG Projects
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/erection_and_installation.html">Erection & Installation</a>
+                            <a href="/services/erection_and_installation.html">Erection & Installation</a>
                         </h4>
-                        <a href="./services/erection_and_installation.html" class="more-btn">Read More
+                        <a href="/services/erection_and_installation.html" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -121,13 +121,13 @@ title: VMG Projects
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="single-service-cap mb-30">
                     <div class="service-img">
-                        <img src="/assets/img/service/Accessories and Additional Components.jpg" alt=""/>
+                        <img src="/assets/img/service/AccessoriesandAdditionalComponents1.png" alt="" width="300px"/>
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/accessories_components.html">Accessories & Components</a>
+                            <a href="/services/accessories_components">Accessories & Components</a>
                         </h4>
-                        <a href="./services/accessories_components.html" class="more-btn">Read More
+                        <a href="/services/accessories_components" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
