--- a/src/index.njk
+++ b/src/index.njk
@@ -57,9 +57,9 @@ title: VMG PREMIER Builds
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/design_and_engineering.html">Designing &amp; Engineering</a>
+                            <a href="/services/design_and_engineering">Designing &amp; Engineering</a>
                         </h4>
-                        <a href="./services/design_and_engineering.html" class="more-btn">Read More
+                        <a href="/services/design_and_engineering" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -75,9 +75,9 @@ title: VMG PREMIER Builds
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/manufacturing.html">Manufacturing</a>
+                            <a href="/services/manufacturing">Manufacturing</a>
                         </h4>
-                        <a href="./services/manufacturing.html" class="more-btn">Read More
+                        <a href="/services/manufacturing" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -93,9 +93,9 @@ title: VMG PREMIER Builds
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/logistic.html">Logistic</a>
+                            <a href="/services/logistic">Logistic</a>
                         </h4>
-                        <a href="./services/logistic.html" class="more-btn">Read More
+                        <a href="/services/logistic" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -111,9 +111,9 @@ title: VMG PREMIER Builds
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/erection_and_installation.html">Erection & Installation</a>
+                            <a href="/services/erection_and_installation">Erection & Installation</a>
                         </h4>
-                        <a href="./services/erection_and_installation.html" class="more-btn">Read More
+                        <a href="/services/erection_and_installation" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
@@ -129,9 +129,9 @@ title: VMG PREMIER Builds
                     </div>
                     <div class="service-cap">
                         <h4>
-                            <a href="./services/accessories_components.html">Accessories & Components</a>
+                            <a href="/services/accessories_components">Accessories & Components</a>
                         </h4>
-                        <a href="./services/accessories_components.html" class="more-btn">Read More
+                        <a href="/services/accessories_components" class="more-btn">Read More
                             <i class="ti-plus"></i>
                         </a>
                     </div>
