--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3199,7 +3199,9 @@ hr {
 }
 
 .services-area1 .single-service-cap .service-img img {
-  width: 100%;
+  width: 500px;
+  height: 350px;
+  object-fit: cover;
   transform: scale(1);
   -webkit-transition: all .5s ease-out 0s;
   -moz-transition: all .5s ease-out 0s;
@@ -3207,7 +3209,6 @@ hr {
   -o-transition: all .5s ease-out 0s;
   transition: all .5s ease-out 0s
 }
-
 .services-area1 .single-service-cap .service-cap {
   padding: 20px 30px 20px 30px;
   background: #fcfdff
