--- a/src/index.njk
+++ b/src/index.njk
@@ -53,7 +53,7 @@ title: VMG PREMIER Builds
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="single-service-cap mb-30">
                     <div class="service-img">
-                        <img src="assets/img/service/Designing & Engineering.jpg" alt=""/>
+                        <img src="assets/img/service/Designing-Engineering.png" alt=""/>
                     </div>
                     <div class="service-cap">
                         <h4>
@@ -71,7 +71,7 @@ title: VMG PREMIER Builds
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="single-service-cap mb-30">
                     <div class="service-img">
-                        <img src="assets/img/service/Manufacturing.jpg" alt=""/>
+                        <img src="assets/img/service/Manufacturing.png" alt=""/>
                     </div>
                     <div class="service-cap">
                         <h4>
@@ -125,7 +125,7 @@ title: VMG PREMIER Builds
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="single-service-cap mb-30">
                     <div class="service-img">
-                        <img src="assets/img/service/Accessories and Additional Components.jpg" alt=""/>
+                        <img src="assets/img/service/Accessories-Components.png" alt=""/>
                     </div>
                     <div class="service-cap">
                         <h4>
