Modularized the code

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4148,6 +4148,43 @@ hr {
   }
 }
 
+
+.project-details {
+  padding: 50px 0;
+}
+
+.projectdetails-img img {
+  width: 100%;
+  height: 100%; 
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.projectdetails1{
+  padding-top: 20px;
+  text-align: center;
+}
+
+.project-description {
+  margin-left: 30px;
+  margin-top: 25px ;
+}
+
+.project-description h3 {
+  font-size: 28px;
+  color: #333;
+}
+
+.project-description h5 {
+  font-size: 20px;
+  color: #555;
+}
+
+.project-description p {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
 .tab-pane {
   -webkit-transition: all .6s ease-out 0s;
   -moz-transition: all .6s ease-out 0s;
@@ -4160,7 +4197,8 @@ hr {
   padding-top: 150px;
   padding-bottom: 250px;
   background-size: cover;
-  background-repeat: no-repeat
+  background-repeat: no-repeat;
+  margin-top: 10rem;
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
