--- a/src/project.njk
+++ b/src/project.njk
@@ -30,7 +30,6 @@ title: VMG Projects
     </div>
 </div>
 <!-- slider Area End-->
-
 <!-- Project Area Start -->
 <section class="project-area  section-padding30">
     <div class="container">
@@ -45,128 +44,107 @@ title: VMG Projects
                         </div>
                         <span class="back-text">Gallery</span>
                     </div>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
-
     <div class="container buildcomponents">
-                    <div class="row primarycomponents">
-                        <!-- Image on the Left -->
-                        <div class="col-md-6 mb-4 mb-md-0">
-                            <img src="/assets/img/buildcomponents/01primary.PNG" alt="Image">
-                            <h5 class="title">PRIMARY FRAMING MEMBERS</h3>
-                        </div>
-
-                        <!-- Description on the Right -->
-                        <div class="col-md-6 text-field">
-
-                            <p> Primary built-up members (H-Beams) are manufactured by gas cutting of
-                                HR steel plates in
-                                required sizes, standards confirming to ASTM A572 Grade 345 Mpa. These plates of various
-                                sizes are welded together on one side by continuous welding and other side by stitch
-                                welding at
-                                regular intervals to make an H-beam. These are custom-built sections, so virtually any
-                                size of
-                                section can be made as per design requirement. Splice plates are welded at the end of
-                                different
-                                H - beam sections. These H-beam sections are assembled together by bolting the splice
-                                plates
-                                to make a complete frame assembly. The Primary members are available in high grade steel
-                                of
-                                minimum yield strength of 345 Mpa.</p>
-                            <a href="/project/primary_framing_members" class="btn ">Read More</a>
-                        </div>
-                    </div>
-
-                    <div class="row secondarycomponents">
-
-                        <!-- Description on the Right -->
-                        <div class="col-md-6 text-field">
-                            <p> Purlins, girts and eave struts are secondary structural members used
-                                to support the wall and roof
-                                panels. Purlins are used on the roof; girts are used on the walls and eave struts are
-                                used at the
-                                intersection of the sidewall and the roof.
-                                intersection of the sidewall and the roof </p>
-                            <a href="/project/secondary_member" class="btn ">Read More</a>
-                        </div>
-
-                        <!-- Image on the Left -->
-                        <div class="col-md-6 mb-4 mb-md-0">
-                            <img src="/assets/img/buildcomponents/07secondary.PNG" alt="Image">
-                            <h5 class="title">SECONDARY MEMBERS</h3>
-                        </div>
-                    </div>
-
-
-                    <div class="row claddingpanels">
-
-                        <!-- Image on the Left -->
-                        <div class="col-md-6 mb-4 mb-md-0">
-                            <img src="/assets/img/buildcomponents/08panels.PNG" alt="Image">
-                            <h5 class="title">ROOFING AND WALL CLADDING PANELS</h3>
-                        </div>
-
-
-                        <!-- Description on the Right -->
-                        <div class="col-md-6 text-field">
-                            <p> Premier Pre-engineered Buildings Offer Roofing and Wall Cladding
-                                Panels of 0.5 mm thick and
-                                550Mpa Galvalume material. Standard roof panels are made of Bare Galvalume material and
-                                Wall Cladding panels are of colour coated Galvalume material. Panel paintfilm thickness
-                                is 25
-                                microns on the exterior weather face and 5-7 microns of PU compatible epoxy primer on
-                                the
-                                interior face. The sheeting material is with hot dip Metallic coating of Galvalume 150
-                                gm/m2
-                                total,AZ 150 as per ASTM A792 or AS 1392, and wall coated with 25 microns regular
-                                modified
-                                polyester paint system applied on Zincalume.</p>
-                            <a href="/project/cladding_panels" class="btn ">Read More</a>
-                        </div>
-                    </div>
-
-                    <div class="row buildwithmezz">
-
-                        <!-- Description on the Right -->
-                        <div class="col-md-6 text-field">
-                            <p>  Premier Standard Mezzanine system is a combination of profiled GI steel deck, built-up primary 
-                                beams, mezzanine joists and intermediate support columns. Built-up beams span in lateral 
-                                directions and mezzanine joists in longitudinal directions bolted to the top flange of beams. A 
-                                concrete slab is cast on the steel deck as a finished surface. Shear buttons are provided on the 
-                                deck panel for proper bonding of concrete with deck panel. 
-                                Steel checkered plates can also be used as top surface. </p>
-                            <a href="/project/buildings_with_mezzanines" class="btn ">Read More</a>
-                        </div>
-
-                        <!-- Image on the Left -->
-                        <div class="col-md-6 mb-4 mb-md-0">
-                            <img src="/assets/img/buildcomponents/09build.PNG" alt="Image">
-                            <h5 class="title">BUILDINGS WITH MEZZANINES</h3>
-                        </div>
-                    </div>
-
-                    <div class="row multistoreyed">
-
-                        <!-- Image on the Left -->
-                        <div class="col-md-6 mb-4 mb-md-0">
-                            <img src="/assets/img/buildcomponents/11multistoreyed.PNG" alt="Image">
-                            <h5 class="title"> MULTI- STOREYED BUILDING</h3>
-                        </div>
-
-                        <!-- Description on the Right -->
-                        <div class="col-md-6 text-field">
-                            <p>   The use of Pre-Engineered Steel building technology in multi-storeyed construction is very 
-                                popular in western countries. The technological improvement in multi-storeyed construction 
-                                technology and due to the advantage of lesser time requirement in construction, usage of 
-                                Pre-Engineered Steel building is becoming popular in multi-storeyed construction in India now 
-                                these days.  </p>
-                            <p> We offers complete  solution  for designing,  manufacturing  and execution of these steel 
-                                    multi-storeyed buildings as per international quality standards.</p>
-                            <a href="/project/multi_storeyed_building" class="btn ">Read More</a>
-                        </div>
-                    </div>
+        <div
+            class="row primarycomponents">
+            <!-- Image on the Left -->
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="/assets/img/buildcomponents/01primary.PNG" alt="Image">
+                <h5 class="title">PRIMARY FRAMING MEMBERS</h3>
+            </div>
+            <!-- Description on the Right -->
+            <div class="col-md-6 text-field">
+                <p>
+                    Primary built-up members (H-Beams) are manufactured by gas cutting of HR steel plates in required sizes, standards
+                    confirming to ASTM A572 Grade 345 Mpa. These plates of various sizes are welded together on one side by continuous
+                    welding and other side by stitch welding at regular intervals to make an H-beam. These are custom-built sections, so
+                    virtually any size of section can be made as per design requirement. Splice plates are welded at the end of different H
+                    - beam sections. These H-beam sections are assembled together by bolting the splice plates to make a complete frame
+                    assembly. The Primary members are available in high grade steel of minimum yield strength of 345 Mpa.</p>
+                <a href="/project/primary_framing_members" class="btn ">Read More</a>
+            </div>
+        </div>
+        <div
+            class="row secondarycomponents">
+            <!-- Description on the Right -->
+            <div class="col-md-6 text-field">
+                <p>
+                    Purlins, girts and eave struts are secondary structural members used to support the wall and roof panels. Purlins are
+                    used on the roof; girts are used on the walls and eave struts are used at the intersection of the sidewall and the roof.
+                    intersection of the sidewall and the roof
+                </p>
+                <a href="/project/secondary_member" class="btn ">Read More</a>
+            </div>
+            <!-- Image on the Left -->
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="/assets/img/buildcomponents/07secondary.PNG" alt="Image">
+                <h5 class="title">SECONDARY MEMBERS</h3>
+            </div>
+        </div>
+        <div
+            class="row claddingpanels">
+            <!-- Image on the Left -->
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="/assets/img/buildcomponents/08panels.PNG" alt="Image">
+                <h5 class="title">ROOFING AND WALL CLADDING PANELS</h3>
+            </div>
+            <!-- Description on the Right -->
+            <div class="col-md-6 text-field">
+                <p>
+                    Premier Pre-engineered Buildings Offer Roofing and Wall Cladding Panels of 0.5 mm thick and 550Mpa Galvalume material.
+                    Standard roof panels are made of Bare Galvalume material and Wall Cladding panels are of colour coated Galvalume
+                    material. Panel paintfilm thickness is 25 microns on the exterior weather face and 5-7 microns of PU compatible epoxy
+                    primer on the interior face. The sheeting material is with hot dip Metallic coating of Galvalume 150 gm/m2 total,AZ 150
+                    as per ASTM A792 or AS 1392, and wall coated with 25 microns regular modified polyester paint system applied on
+                    Zincalume.</p>
+                <a href="/project/cladding_panels" class="btn ">Read More</a>
+            </div>
+        </div>
+        <div
+            class="row buildwithmezz">
+            <!-- Description on the Right -->
+            <div class="col-md-6 text-field">
+                <p>
+                    Premier Standard Mezzanine system is a combination of profiled GI steel deck, built-up primary beams, mezzanine joists
+                    and intermediate support columns. Built-up beams span in lateral directions and mezzanine joists in longitudinal
+                    directions bolted to the top flange of beams. A concrete slab is cast on the steel deck as a finished surface. Shear
+                    buttons are provided on the deck panel for proper bonding of concrete with deck panel. Steel checkered plates can also
+                    be used as top surface.
+                </p>
+                <a href="/project/buildings_with_mezzanines" class="btn ">Read More</a>
+            </div>
+            <!-- Image on the Left -->
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="/assets/img/buildcomponents/09build.PNG" alt="Image">
+                <h5 class="title">BUILDINGS WITH MEZZANINES</h3>
+            </div>
+        </div>
+        <div
+            class="row multistoreyed">
+            <!-- Image on the Left -->
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="/assets/img/buildcomponents/11multistoreyed.PNG" alt="Image">
+                <h5 class="title">
+                    MULTI- STOREYED BUILDING</h3>
+            </div>
+            <!-- Description on the Right -->
+            <div class="col-md-6 text-field">
+                <p>
+                    The use of Pre-Engineered Steel building technology in multi-storeyed construction is very popular in western countries.
+                    The technological improvement in multi-storeyed construction technology and due to the advantage of lesser time
+                    requirement in construction, usage of Pre-Engineered Steel building is becoming popular in multi-storeyed construction
+                    in India now these days.
+                </p>
+                <p>
+                    We offers complete solution for designing, manufacturing and execution of these steel multi-storeyed buildings as per
+                    international quality standards.</p>
+                <a href="/project/multi_storeyed_building" class="btn ">Read More</a>
+            </div>
+        </div>
     </div>
 </section>
 <!-- Project Area End -->
