--- a/src/index.njk
+++ b/src/index.njk
@@ -155,44 +155,124 @@ title: VMG PREMIER Builds
 </div>
 <!-- Services Area End -->
 <!-- About Area Start -->
-<section class="support-company-area fix pt-10 about-us">
-    <div class="support-wrapper align-items-center justify-content-between">
-        <div
-            class="left-content">
-            <!-- section tittle -->
-            <div class="section-tittle section-tittle2 mb-55 ">
-                <div class="front-text">
-                    <p class="">
-                        <span>Vision</span>
-                        & Mission</p>
-                </div>
-            </div>
-            <div class="support-caption">
-                <p class="pera-top">
-                    Our Vision is to be the most reliable solution provider in the field of Pre-Engineered Buildings and Structural Steel
-                    projects.
-                </p>
-                <p></p>
-                <p>
-                    Our mission is to provide complete end to end solution to clients for their steel building requirements and enrich them
-                    with the experience at our services with utmost satisfaction.
-                </p>
-                <a href="/about/" class="btn red-btn2">read more</a>
-            </div>
+<div class="services-area1 section-padding30">
+  <div
+    class="container">
+    <!-- section tittle -->
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-tittle mb-55">
+          <div class="front-text">
+            <h2 class="">Our Services</h2>
+          </div>
+          <span class="back-text">Services</span>
         </div>
-        <div
-            class="right-content">
-            <!-- img -->
-            <div class="right-img">
-                <img src="assets/img/gallery/Vision & Mission.jpg" alt=""/>
-            </div>
-            <div class="support-img-cap text-center">
-                <span>1994</span>
-                <p>Since</p>
-            </div>
-        </div>
+      </div>
     </div>
-</section>
+    <div class="row">
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-service-cap mb-30">
+          <div class="service-img">
+            <a href="/services/design_and_engineering" class="more-btn">
+              <img src="/assets/img/service/Designing-Engineering.png" alt=""/>
+            </a>
+          </div>
+          <div class="service-cap">
+            <h4>
+              <a href="/services/design_and_engineering">Designing &amp; Engineering</a>
+            </h4>
+            <a href="/services/design_and_engineering" class="more-btn">Read More
+              <i class="ti-plus"></i>
+            </a>
+          </div>
+          <div class="service-icon">
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-service-cap mb-30">
+          <div class="service-img">
+            <a href="/services/manufacturing" class="more-btn">
+              <img src="/assets/img/service/Manufacturing.png" alt=""/>
+            </a>
+          </div>
+          <div class="service-cap">
+            <h4>
+              <a href="/services/manufacturing">Manufacturing</a>
+            </h4>
+            <a href="/services/manufacturing" class="more-btn">Read More
+              <i class="ti-plus"></i>
+            </a>
+          </div>
+          <div class="service-icon">
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-service-cap mb-30">
+          <div class="service-img">
+            <a href="/services/logistic" class="more-btn">
+              <img src="/assets/img/service/Designing-Engineering.png" alt=""/>
+            </a>
+          </div>
+          <div class="service-cap">
+            <h4>
+              <a href="/services/logistic">Logistic</a>
+            </h4>
+            <a href="/services/logistic" class="more-btn">Read More
+              <i class="ti-plus"></i>
+            </a>
+          </div>
+          <div class="service-icon">
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-service-cap mb-30">
+          <div class="service-img">
+            <a href="/services/erection_and_installation" class="more-btn">
+            <img src="/assets/img/service/erection-installation.jpg" alt=""/>
+            </a>
+          </div>
+          <div class="service-cap">
+            <h4>
+              <a href="/services/erection_and_installation">Erection & Installation</a>
+            </h4>
+            <a href="/services/erection_and_installation" class="more-btn">Read More
+              <i class="ti-plus"></i>
+            </a>
+          </div>
+          <div class="service-icon">
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-service-cap mb-30">
+          <div class="service-img">
+            <a href="/services/accessories_components" class="more-btn">
+            <img src="/assets/img/service/Accessories-Components.png" alt=""/>
+            </a>
+          </div>
+          <div class="service-cap">
+            <h4>
+              <a href="/services/accessories_components">Accessories & Components</a>
+            </h4>
+            <a href="/services/accessories_components" class="more-btn">Read More
+              <i class="ti-plus"></i>
+            </a>
+          </div>
+          <div class="service-icon">
+            <img src="/assets/img/icon/services_icon1.png" alt=""/>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- About Area End -->
 
 <!-- contact with us Start -->
