--- a/src/_includes/service_details.njk
+++ b/src/_includes/service_details.njk
@@ -28,7 +28,7 @@ layout: base.html
       <div class="col-12">
         <div class="single-services section-padding2">
           <div class="details-img mb-40">
-            <img src="{{img}}" alt="Accessories and Additional Components" />
+            <img src="{{img}}" alt="Alternate Image" />
           </div>
           <div class="details-caption">
             <p>{{description}}</p>
