--- a/src/index.njk
+++ b/src/index.njk
@@ -31,6 +31,44 @@ title: VMG PREMIER Builds
     </div>
 </div>
 <!-- slider Area End-->
+<!-- About Start -->
+<section class="support-company-area fix pt-10 section-padding30">
+    <div class="support-wrapper align-items-end">
+        <div
+                class="left-content">
+            <!-- section tittle -->
+            <div class="section-tittle section-tittle2 mb-55">
+                <div class="front-text">
+                    <h2 class="">Who we are</h2>
+                </div>
+                <span class="back-text">About us</span>
+            </div>
+            <div class="support-caption">
+                <p class="pera-top">
+                    Premier Pre-Engineered Buildings: Leading Provider of Innovative Building Solutions
+                </p>
+                <p>
+                    With a focus on providing comprehensive, end-to-end services, we handle every aspect of a building project, from
+                    conceptualization to execution. Our commitment to excellence is reflected in our ability to offer custom-built designs
+                    that not only meet but exceed our clients' expectations.
+                </p>
+                <!-- <a href="about.html" class="btn red-btn2">read more</a> -->
+            </div>
+        </div>
+        <div
+                class="right-content">
+            <!-- img -->
+            <div class="right-img">
+                <img src="assets/img/gallery/safe_in.png" alt=""/>
+            </div>
+            <div class="support-img-cap text-center">
+                <span>1994</span>
+                <p>Since</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- About End -->
 <!-- Services Area Start -->
 <div class="services-area1 section-padding">
   <div
@@ -163,7 +201,7 @@ title: VMG PREMIER Builds
                         <!-- Section Tittle -->
                         <div class="section-tittle section-tittle4">
                             <div class="front-text">
-                                <h2 class="">Our Work Portfolio</h2>
+                                <h2 class="">Our Products</h2>
                             </div>
                             <span class="back-text">Our Work</span>
                         </div>
@@ -172,7 +210,7 @@ title: VMG PREMIER Builds
                             work that meets our clients' needs and exceeds their expectations. From industrial machinery to specialized tools, our
                             expertise spans across various sectors of manufacturing and engineering.
                         </p>
-                        <a href="/project/" class="white-btn">View Portfolio</a>
+                        <a href="/project/" class="white-btn">View Products</a>
                     </div>
                 </div>
             </div>
@@ -215,7 +253,7 @@ title: VMG PREMIER Builds
                     <div class="count-clients">
                         <div class="single-counter">
                             <div class="count-number">
-                                <span class="counter">08</span>
+                                <span class="counter">80</span>
                             </div>
                             <div class="count-text">
                                 <p>Machinery</p>
@@ -229,44 +267,6 @@ title: VMG PREMIER Builds
     </div>
 </div>
 <!-- CountDown Area End -->
-<!-- About Start -->
-<section class="support-company-area fix pt-10 section-padding30">
-    <div class="support-wrapper align-items-end">
-        <div
-            class="left-content">
-            <!-- section tittle -->
-            <div class="section-tittle section-tittle2 mb-55">
-                <div class="front-text">
-                    <h2 class="">Who we are</h2>
-                </div>
-                <span class="back-text">About us</span>
-            </div>
-            <div class="support-caption">
-                <p class="pera-top">
-                    Premier Pre-Engineered Buildings: Leading Provider of Innovative Building Solutions
-                </p>
-                <p>
-                    With a focus on providing comprehensive, end-to-end services, we handle every aspect of a building project, from
-                    conceptualization to execution. Our commitment to excellence is reflected in our ability to offer custom-built designs
-                    that not only meet but exceed our clients' expectations.
-                </p>
-                <!-- <a href="about.html" class="btn red-btn2">read more</a> -->
-            </div>
-        </div>
-        <div
-            class="right-content">
-            <!-- img -->
-            <div class="right-img">
-                <img src="assets/img/gallery/safe_in.png" alt=""/>
-            </div>
-            <div class="support-img-cap text-center">
-                <span>1994</span>
-                <p>Since</p>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- About End -->
 <!-- Testimonial Start -->
 <div class="testimonial-area t-bg testimonial-padding mb-8">
     <div class="container">
