--- a/src/_includes/project_details.njk
+++ b/src/_includes/project_details.njk
@@ -3,8 +3,7 @@ layout: base.html
 ---
 <div class="slider-area ">
     <div
-        class="single-slider hero-overly slider-height2 d-flex align-items-center"
-        data-background="../assets/img/hero/about.jpg">
+        class="single-slider hero-overly slider-height2 d-flex align-items-center bg-img-1">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
