--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -157,15 +157,15 @@ p {
 }
 
 .bg-img-1 {
-  background-image: url(../img/slider/slider-img-1.jpg)
+  background-image: url('../img/hero/about.jpg')
 }
 
 .bg-img-2 {
-  background-image: url(../img/background-img/bg-img-2.jpg)
+  background-image: url('../img/hero/about.jpg')
 }
 
 .cta-bg-1 {
-  background-image: url(../img/background-img/bg-img-3.jpg)
+  background-image: url('../img/hero/about.jpg')
 }
 
 .img {
