--- a/src/_includes/project_details.njk
+++ b/src/_includes/project_details.njk
@@ -52,7 +52,7 @@ layout: base.html
         <!-- Back Button -->
         <div class="row">
             <div class="col-lg-12">
-                <a href="/project/" class="btn ">Read More</a>
+                <a href="/project/" class="btn ">See all Projects</a>
             </div>
         </div>
     </div>
