--- a/src/service.njk
+++ b/src/service.njk
@@ -90,7 +90,7 @@ title: VMG Projects
         <div class="single-service-cap mb-30">
           <div class="service-img">
             <a href="/services/logistic" class="more-btn">
-              <img src="/assets/img/service/Logistic.avif" alt=""/>
+              <img src="/assets/img/service/Logistic.jpeg" alt=""/>
             </a>
           </div>
           <div class="service-cap">
@@ -110,7 +110,7 @@ title: VMG Projects
         <div class="single-service-cap mb-30">
           <div class="service-img">
             <a href="/services/erection_and_installation" class="more-btn">
-            <img src="/assets/img/service/erection-installation.jpg" alt=""/>
+            <img src="/assets/img/service/erection-installation.jpeg" alt=""/>
             </a>
           </div>
           <div class="service-cap">
