Added changes to product file

--- a/src/product.njk
+++ b/src/product.njk
@@ -48,9 +48,10 @@ title: VMG Products
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container product-sections">
         <!-- Primary Framing Members Section -->
-        <div class="row d-flex align-items-center flex-column flex-md-row mb-4">
+        
+        <div class="row d-flex align-items-center flex-column flex-md-row mb-4 ">
             <div class="col-md-6 mb-4 mb-md-0">
                 <img src="/assets/img/buildcomponents/01primary.PNG" alt="Primary Framing Members" class="img-fluid">
                 <h5 class="title mt-3">PRIMARY FRAMING MEMBERS</h5>
