Added changes to base.html file

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/assets/css/slick.css" />
     <link rel="stylesheet" href="/assets/css/nice-select.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/product.css">
   </head>
 
   <body>
@@ -104,6 +105,7 @@
                     <nav>
                       <ul id="navigation" class="justify-content-center">
                         <li><a href="/">Home</a></li>
+                        <li><a href="/product/">Products</a></li>
                         <li><a href="/project/">Projects</a></li>
                         <li><a href="/service/">Services</a></li>
                         <li><a href="/contact/">Contact</a></li>
@@ -158,6 +160,7 @@
                     <ul>
                       <li><a href="/">About</a></li>
                       <li><a href="/service/">Services</a></li>
+                      <li><a href="/product/">Products</a></li>
                       <li><a href="/project/">Projects</a></li>
                       <li><a href="/contact/">Contact Us</a></li>
                     </ul>
@@ -199,8 +202,7 @@
                     <a
                       href="https://display-promotion.vercel.app"
                       target="_blank"
-                      >Display Promotion</a
-                    >
+                      >Display Promotion</a>
                     with
                     <a href="https://colorlib.com" target="_blank">Colorlib</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
